Fix layout issue

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -438,7 +438,7 @@ a:focus {
     /* See styles/bootstrap/patterns.less .modal class.
        Pushing this value down to .modal-header and .modal-body
        to allow the overall modal to take the width of the footer */
-    width: 560px;
+    width: auto;
 }
 
 .modal-footer {
@@ -599,7 +599,6 @@ a[href^="http"] {
     
     .modal-header {
         border-bottom: none;
-        width: 760px;
         padding: 0;
         
         .nav-tabs {
@@ -690,7 +689,6 @@ a[href^="http"] {
         overflow-y: scroll;
         background-color: @tc-gray-panel;
         padding: 0;
-        width: 760px;
         
         .empty-message {
             position: absolute;
@@ -763,10 +761,6 @@ a[href^="http"] {
                 margin-top: 240px;
             }
         }
-    }
-    
-    .modal-footer {
-        width: 730px;
     }
 }
 
